jena-shex/src/test/files/spec/negativeSyntax/prefix-none.shex
# Missing ex: prefix
# source: turtle-syntax-bad-prefix-01.ttl

<http://a.example/IssueShape> {
   ex:p1 .
}
